fixing backend + sviluppo ui
